--- a/src/_includes/macros/button.njk
+++ b/src/_includes/macros/button.njk
@@ -8,7 +8,7 @@
     {% endif %}
 
     {% if params.variant === "secondary" %}
-      {% set variant = "bg-white text-blue-500 border-white fine:hover:border-blue-500 fine:hover:text-blue-600 focus:outline-none focus:ring focus:ring-blue-800 focus:ring-offset-1 focus:ring-offset-white" %}
+      {% set variant = "bg-white text-blue-500 border-blue-500 fine:hover:border-blue-600 fine:hover:text-blue-600 fine:hover:bg-blue-50 focus:outline-none focus:ring focus:ring-blue-800 focus:ring-offset-1 focus:ring-offset-white" %}
     {% endif %}
   {% endif %}
 
